Fix scrollbar css

--- a/src/client/app/components/nav/scroll/scroll.scss
+++ b/src/client/app/components/nav/scroll/scroll.scss
@@ -1,21 +1,17 @@
 .nav-list {
   height : 80px;
   list-style-type: none;
-  padding: 0;
+  margin: 0;
 }
 
-.scroll-button {
-  white-space: normal;
-  padding: 1%;
-  width: 12%;
-  margin: 0 10px;
-}
 .nav-tile {
-  margin:0;
   height: 80px;
-  padding: 0;
+  max-width: none;
+  min-width: 0;
+  white-space: normal;
 }
 
 .nav-arrow {
-  width: 20px;
+  min-width: 0;
+  height: 100%;
 }
