--- a/src/client/iframe.css
+++ b/src/client/iframe.css
@@ -1,6 +1,4 @@
 .iframe {
-    max-height: 500px;
-    max-width: 900px;
-    padding-top: 10%;
-    padding-left: 20%;
+    max-height: 700px;
+    width: 900px;
 }
